@@ -646,6 +646,12 @@
 	* config/avr/avr-devices.c (avr_mcu_types): Set
 	.data_section_start of atmega164a to 0x100.
 
+2011-10-07  Andrew Stubbs  <ams@codesourcery.com>
+
+	* config/arm/predicates.md (shift_amount_operand): Remove constant
+	range check.
+	(shift_operator): Check range of constants for all shift operators.
+
 2011-10-07  Bernd Schmidt  <bernds@codesourcery.com>
 
 	PR target/49049
